Add maven java14 images and adapt script to work on Debian as well

--- a/maven/Dockerfile
+++ b/maven/Dockerfile
@@ -3,6 +3,7 @@ FROM $MAVEN_IMAGE
 LABEL maintainer="Alberto Oliveira <alberto@stilingue.com.br>"
 
 ARG INSTALL_GCLOUD=false
+ARG INSTALL_GCLOUD_EMULATOR=false
 ARG INSTALL_DOCKER=false
 
 COPY setup.sh /setup.sh
